--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "add": "^2.0.6",
     "bcrypt": "^5.1.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -22,6 +24,8 @@
     "mongoose": "^6.10.0",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.1",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "uuidv4": "^6.2.13"
